--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-header {align:center;
+header {text-align: center;
         color: red}
-nav {align:left;
+nav {text-align: left;
      color:blue}
-article {align:right;
+article {text-align: right;
         color:green}
-footer {align:center;
+footer {text-align: center;
         color:red}
